--- a/app/src/main/res/layout/activity_vital_measure.xml
+++ b/app/src/main/res/layout/activity_vital_measure.xml
@@ -132,11 +132,8 @@
 
     <TextView
         android:id="@+id/test_msg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_middle"
-        android:text="@string/vital_test_msg_blt_select"
-        android:background="@drawable/bg_msg"/>
+        style="@style/MessageStyle"
+        android:text="@string/vital_test_msg_blt_select"/>
 
     <LinearLayout
         android:layout_width="match_parent"
