--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -169,6 +169,16 @@
 
     <!--add sato end-->
 
+    <!--message add sato-->
+    <style name="MessageStyle" parent="android:Widget.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/bg_msg</item>
+        <item name="android:textSize">@dimen/text_size_middle</item>
+    </style>
+
+    <!--message add sato end -->
+
     <style name="vitalTitleTextStyle" parent="android:Widget.TextView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
