--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,7 +83,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">@dimen/list_button_text_size</item>
         <item name="android:background">@drawable/toggle_btn_background</item>
-        <item name="android:textColor">@drawable/toggle_btn_text</item>
+        <item name="android:textColor">@android:color/background_light</item>
     </style>
 
     <style name="ListNormalGoupButtonStyle" parent="ListButtonStyle">
