--- a/app/src/main/res/layout/activity_visual_check.xml
+++ b/app/src/main/res/layout/activity_visual_check.xml
@@ -21,7 +21,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_border_line"
                     android:layerType="software"
                     android:orientation="vertical">
 
@@ -34,15 +33,16 @@
                             style="@style/ListTextViewStyle"
                             android:text="@string/car_number" />
 
-                        <TextView
-                            style="@style/ListTextViewStyle"
-                            android:gravity="right"
-                            android:text="XXXXX" />
+                        <EditText
+                            style="@style/EditTextNumberStyle"
+                            android:focusable="false"
+                            android:text="B0013"/>
+
                     </LinearLayout>
                 </LinearLayout>
 
-                <!--<View-->
-                    <!--style="@style/ListViewSeparator"/>-->
+                <View
+                    style="@style/ListViewSeparator"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
