--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -195,14 +195,27 @@
         <item name="android:textSize">@dimen/text_size_middle</item>
     </style>
 
-    <style name="EditTextNumberStyle" parent="android:Widget.EditText">
+    <!--<style name="EditTextNumberStyle" parent="android:Widget.EditText">-->
+        <!--<item name="android:layout_width">0dp</item>-->
+        <!--<item name="android:layout_height">wrap_content</item>-->
+        <!--<item name="android:gravity">right</item>-->
+        <!--<item name="android:layout_weight">2</item>-->
+        <!--<item name="android:maxLines">1</item>-->
+        <!--<item name="android:inputType">numberDecimal</item>-->
+        <!--<item name="android:textSize">@dimen/list_title_text_size</item>-->
+    <!--</style>-->
+
+    <style name="EditTextViewStyle" parent="android:Widget.EditText">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">right</item>
         <item name="android:layout_weight">2</item>
         <item name="android:maxLines">1</item>
-        <item name="android:inputType">numberDecimal</item>
         <item name="android:textSize">@dimen/list_title_text_size</item>
+    </style>
+
+    <style name="EditTextNumberStyle" parent="EditTextViewStyle">
+        <item name="android:inputType">numberDecimal</item>
     </style>
 
 
