--- a/app/src/main/res/layout/activity_day_check_start.xml
+++ b/app/src/main/res/layout/activity_day_check_start.xml
@@ -10,7 +10,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,5 +38,16 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/back_button"
+            style="@style/backButtonStyle"/>
+    </LinearLayout>
 
 </LinearLayout>
