--- a/app/src/main/res/drawable/fg_round_image.xml
+++ b/app/src/main/res/drawable/fg_round_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="center" android:left="25dp" android:right="25dp" android:top="25dp" android:bottom="25dp" android:drawable="@drawable/bg_camera"/>
     <item android:drawable="@drawable/fg_round" />
+    <item android:id="@+id/bg_camera_scale" android:drawable="@drawable/bg_camera_scale"/>
 </layer-list>
