--- a/app/src/main/res/layout/activity_alcohol_measure.xml
+++ b/app/src/main/res/layout/activity_alcohol_measure.xml
@@ -84,7 +84,7 @@
                         android:visibility="invisible" />
                 </LinearLayout>
 
-                <TextView
+                <ImageView
                     android:id="@+id/cameraMessage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
