--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorGray">#999999</color>
     <color name="colorGreen">#97D077</color>
+    <color name="colorYellow">#FFCC00</color>
 
 </resources>
