--- a/app/src/main/res/layout/activity_health_status_reg.xml
+++ b/app/src/main/res/layout/activity_health_status_reg.xml
@@ -269,12 +269,10 @@
         android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/back_button"
-            style="@style/backButtonStyle"/>
+            android:id="@+id/menu_button"
+            style="@style/bottomButtonStyle"
+            android:text="@string/action_menu" />
 
-        <Button
-            android:id="@+id/next_button"
-            style="@style/nextButtonStyle"/>
     </LinearLayout>
 
 </LinearLayout>
