--- a/app/src/main/res/layout/activity_vital_measure.xml
+++ b/app/src/main/res/layout/activity_vital_measure.xml
@@ -142,8 +142,10 @@
         android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/next_button"
-            style="@style/nextButtonStyle" />
+            android:id="@+id/menu_button"
+            style="@style/bottomButtonStyle"
+            android:text="@string/action_menu" />
+
     </LinearLayout>
 
 
