--- a/app/src/main/res/layout/activity_vital_sign_measure.xml
+++ b/app/src/main/res/layout/activity_vital_sign_measure.xml
@@ -83,8 +83,10 @@
         android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/next_button"
+            android:id="@+id/menu_button"
             style="@style/bottomButtonStyle"
-            android:text="@string/action_next" />
+            android:text="@string/action_menu" />
+
     </LinearLayout>
+
 </LinearLayout>
