--- a/app/src/main/res/layout/activity_health_status_reg.xml
+++ b/app/src/main/res/layout/activity_health_status_reg.xml
@@ -21,124 +21,124 @@
             <View
                 style="@style/ListViewSeparator"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingVertical="5dp">-->
 
-                <TextView
-                    style="@style/ListTextViewStyle"
-                    android:text="@string/check_body_pain_title"/>
+                <!--<TextView-->
+                    <!--style="@style/ListTextViewStyle"-->
+                    <!--android:text="@string/check_body_pain_title"/>-->
 
-                <ToggleButton
-                    style="@style/ListOkNgButtonStyle" />
-            </LinearLayout>
+                <!--<ToggleButton-->
+                    <!--style="@style/ListOkNgButtonStyle" />-->
+            <!--</LinearLayout>-->
 
-            <View
-                style="@style/ListViewSeparator"/>
+            <!--<View-->
+                <!--style="@style/ListViewSeparator"/>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingVertical="5dp">-->
 
-                <TextView
-                    style="@style/ListTextViewStyle"
-                    android:text="@string/check_breath_title"/>
+                <!--<TextView-->
+                    <!--style="@style/ListTextViewStyle"-->
+                    <!--android:text="@string/check_breath_title"/>-->
 
-                <ToggleButton
-                    style="@style/ListOkNgButtonStyle" />
-            </LinearLayout>
+                <!--<ToggleButton-->
+                    <!--style="@style/ListOkNgButtonStyle" />-->
+            <!--</LinearLayout>-->
 
-            <View
-                style="@style/ListViewSeparator"/>
+            <!--<View-->
+                <!--style="@style/ListViewSeparator"/>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingVertical="5dp">-->
 
-                <TextView
-                    style="@style/ListTextViewStyle"
-                    android:text="@string/check_pules_title"/>
+                <!--<TextView-->
+                    <!--style="@style/ListTextViewStyle"-->
+                    <!--android:text="@string/check_pules_title"/>-->
 
-                <ToggleButton
-                    style="@style/ListOkNgButtonStyle" />
-            </LinearLayout>
+                <!--<ToggleButton-->
+                    <!--style="@style/ListOkNgButtonStyle" />-->
+            <!--</LinearLayout>-->
 
-            <View
-                style="@style/ListViewSeparator"/>
+            <!--<View-->
+                <!--style="@style/ListViewSeparator"/>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingVertical="5dp">-->
 
-                <TextView
-                    style="@style/ListTextViewStyle"
-                    android:text="@string/check_numbness_title"/>
+                <!--<TextView-->
+                    <!--style="@style/ListTextViewStyle"-->
+                    <!--android:text="@string/check_numbness_title"/>-->
 
-                <ToggleButton
-                    style="@style/ListOkNgButtonStyle" />
-            </LinearLayout>
+                <!--<ToggleButton-->
+                    <!--style="@style/ListOkNgButtonStyle" />-->
+            <!--</LinearLayout>-->
 
-            <View
-                style="@style/ListViewSeparator"/>
+            <!--<View-->
+                <!--style="@style/ListViewSeparator"/>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingVertical="5dp">-->
 
-                <TextView
-                    style="@style/ListTextViewStyle"
-                    android:text="@string/check_talk_title"/>
+                <!--<TextView-->
+                    <!--style="@style/ListTextViewStyle"-->
+                    <!--android:text="@string/check_talk_title"/>-->
 
-                <ToggleButton
-                    style="@style/ListOkNgButtonStyle" />
-            </LinearLayout>
+                <!--<ToggleButton-->
+                    <!--style="@style/ListOkNgButtonStyle" />-->
+            <!--</LinearLayout>-->
 
-            <View
-                style="@style/ListViewSeparator"/>
+            <!--<View-->
+                <!--style="@style/ListViewSeparator"/>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingVertical="5dp">-->
 
-                <TextView
-                    style="@style/ListTextViewStyle"
-                    android:text="@string/check_eye_title"/>
+                <!--<TextView-->
+                    <!--style="@style/ListTextViewStyle"-->
+                    <!--android:text="@string/check_eye_title"/>-->
 
-                <ToggleButton
-                    style="@style/ListOkNgButtonStyle" />
-            </LinearLayout>
+                <!--<ToggleButton-->
+                    <!--style="@style/ListOkNgButtonStyle" />-->
+            <!--</LinearLayout>-->
 
-            <View
-                style="@style/ListViewSeparator"/>
+            <!--<View-->
+                <!--style="@style/ListViewSeparator"/>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingVertical="5dp">-->
 
-                <TextView
-                    style="@style/ListTextViewStyle"
-                    android:text="@string/check_headache_title"/>
+                <!--<TextView-->
+                    <!--style="@style/ListTextViewStyle"-->
+                    <!--android:text="@string/check_headache_title"/>-->
 
-                <ToggleButton
-                    style="@style/ListOkNgButtonStyle" />
-            </LinearLayout>
+                <!--<ToggleButton-->
+                    <!--style="@style/ListOkNgButtonStyle" />-->
+            <!--</LinearLayout>-->
 
-            <View
-                style="@style/ListViewSeparator"/>
+            <!--<View-->
+                <!--style="@style/ListViewSeparator"/>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
