点呼メニュー画面ボタンの文字を修正

--- a/app/src/main/res/layout/activity_vital_sign_measure.xml
+++ b/app/src/main/res/layout/activity_vital_sign_measure.xml
@@ -85,7 +85,7 @@
         <Button
             android:id="@+id/menu_button"
             style="@style/bottomButtonStyle"
-            android:text="@string/action_menu" />
+            android:text="@string/check_crew_back_before" />
 
     </LinearLayout>
 
