--- a/app/src/main/res/layout/activity_vital_measure.xml
+++ b/app/src/main/res/layout/activity_vital_measure.xml
@@ -134,7 +134,7 @@
 
                 <ProgressBar
                     android:id="@+id/test_progressbar"
-                    style="?android:attr/progressBarStyleHorizontal"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
