--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -57,6 +57,13 @@
         </LinearLayout>
     </ScrollView>
 
+
+    <TextView
+        android:id="@+id/test_msg"
+        style="@style/MessageStyle"
+        android:text="" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
